--- a/themes/fadmashion_commerce/css/jalert.css
+++ b/themes/fadmashion_commerce/css/jalert.css
@@ -47,6 +47,7 @@ body{
 	font-size:12px;
 	margin-left:4px;
 	margin-right:4px;
+	font-family:"museo-sans-1","museo-sans-2", Helvetica; 
 }
 
 .msg-icon{
