--- a/themes/fadmashion_commerce/css/jalert.css
+++ b/themes/fadmashion_commerce/css/jalert.css
@@ -48,6 +48,7 @@ body{
 	margin-left:4px;
 	margin-right:4px;
 	font-family:"museo-sans-1","museo-sans-2", Helvetica; 
+	font-weight: bold;
 }
 
 .msg-icon{
