--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -82,18 +82,14 @@ a.more{background: url(../images/arrow_blue_down.jpg) center right no-repeat; pa
 .pricing .savings{ color: #b83838;background: url(../images/dotted_vertical.png) top left repeat-y;}
 .pricing h3{font-size: 22px; font-weight:700; padding-top: 6px;}
 
-.itemOptions{ width: 332px; background: url(../images/bg_itemOptions.jpg) top left repeat-y; clear: both; margin-bottom: 14px; text-align:center;}
+.itemOptions{ width: 332px; clear: both; margin-bottom: 14px; text-align:center;}
 .itemOptions .frame{display: block; }
-.itemOptions .box{padding: 10px 10px 5px 10px; font-size: 12px; }
+.itemOptions .box{background: url(../images/bg_itemOptions.jpg) top left repeat-y;  padding: 10px 10px 5px 10px; font-size: 12px; }
 .itemOptions .product_button_text{margin-top: 10px; font-family:Georgia, "Times New Roman", Times, serif; font-style:italic; text-align: center;}
 
 .itemOptions .options{text-align: left;}
-.itemOptions .form-submit, .itemOptions  .button a {
-font-size:15px;
-font-weight:300;
-margin:0;
-padding:6px 30px;
-}
+.itemOptions .form-submit, .itemOptions  .button a {font-size:15px;font-weight:300;margin:0;padding:6px 30px;}
+.notify {border-bottom:1px solid #F0EFED;border-top:1px solid #F0EFED;margin:0 0 20px;padding:20px 0;text-align:center;}
 
 .quicktabs_wrapper{background: #f0eeea; padding: 4px; margin: 15px 0;}
 ul.quicktabs_tabs, .quicktabs_tabs li{float: left; list-style-type:none;}
