--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -38,7 +38,7 @@ ul{list-style-type: none;}
 .navBox{margin: 16px 0 0 20px}
 .navBox, .nav, .nav li{float: left; list-style-type:none;}
 .nav{background: url(../images/bg_nav.png) top left repeat-x; height: 27px; color: #fff; padding-left: 4px;}
-.nav li a {font-style: normal; font-size: 14px; padding: 5px 15px 0 5px; color: #cdc6c0; }
+.nav li a {font-family:"museo-sans-1","museo-sans-2", Helvetica; font-style: normal; font-size: 14px; padding: 5px 15px 0 5px; color: #cdc6c0; }
 .nav li a:hover{color: #fff;}
 .nav li a.active{color: #fff;}
 .navBox img{float: left; }
