--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -93,6 +93,14 @@ a.more{background: url(../images/arrow_blue_down.jpg) center right no-repeat; pa
 .itemOptions .form-submit, .itemOptions  .button a {font-size:15px;font-weight:300;margin:0;padding:6px 30px;}
 .notify {border-bottom:1px solid #F0EFED;border-top:1px solid #F0EFED;margin:0 0 20px;padding:20px 0;text-align:center;}
 
+#commerce-cart-add-to-cart-form label {float: left;}
+.form-item-colors .selectBox-options li,  .form-item-sizes .selectBox-options li{float:left; }
+.form-item-colors .selectBox-options li a, .form-item-sizes .selectBox-options li a{border: 1px solid #ddd; margin-left: 10px; width: 20px; height:20px; float:left; cursor: pointer; }
+.form-item-colors .selectBox-options li.selectBox-selected a{border: 1px solid #000; }
+.form-item-sizes .selectBox-options li.selectBox-selected a {background-color: #C8DEF4 }
+.form-item-sizes .selectBox-options li a {font-style: normal; padding: 2px; background-color: #fff}
+.form-item-sizes {height: 40px; }
+
 .quicktabs_wrapper{background: #f0eeea; padding: 4px; margin: 15px 0;}
 ul.quicktabs_tabs, .quicktabs_tabs li{float: left; list-style-type:none;}
 .quicktabs_tabs li.active{background: #fff;}
