--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -195,15 +195,15 @@ filter:progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff',EndCol
 .check{margin-right: 5px;}
 
 /********* Checkout ***********/
-.page-checkout #wrapper{background-image: url(../images/bg_header_checkout.jpg)}
-.page-checkout .title{color: #ccad97; border-left: 1px solid #574d46; height: 30px; line-height: 30px; padding: 0 0 0 16px; float: left; position: relative; left: 20px; top: 14px; font-family: Georgia, "Times New Roman", Times, serif; font-style:italic;}
-.page-checkout #header .button{float: right; padding: 6px 9px; margin-top: 17px;}
+.page-express-checkout  #wrapper{background-image: url(../images/bg_header_checkout.jpg)}
+.page-express-checkout  .title{color: #ccad97; border-left: 1px solid #574d46; height: 30px; line-height: 30px; padding: 0 0 0 16px; float: left; position: relative; left: 20px; top: 14px; font-family: Georgia, "Times New Roman", Times, serif; font-style:italic;}
+.page-express-checkout  #header .button a{float: right; padding: 6px 9px; margin-top: 17px;}
 
-.page-checkout #content{width: 1000px; margin-top: 20px;background: url(../images/dotted_vertical.png) 704px 0 repeat-y;}
-.page-checkout .sidebarRight .column1{width: 682px;background: ; padding-right: 25px; }
-.page-checkout .sidebarRight .column2{width:267px; background: }
-.page-checkout.sidebarRight .sidebar{ background: ; width: 100%; }
-
+.page-express-checkout  #content{width: 1000px; margin-top: 20px;background: url(../images/dotted_vertical.png) 704px 0 repeat-y;}
+.page-express-checkout  .sidebarRight .column1{width: 682px;background: ; padding-right: 25px; }
+.page-express-checkout  .sidebarRight .column2{width:267px; background: }
+.page-express-checkout  .sidebarRight .sidebar{width: 100%}
+	
 .customer_profile_shipping {margin-bottom: 25px;}
 
 .page-checkout fieldset{ background: #faf8f6; float: left; width: 680px;border-radius:5px; -webkit-border-radius: 5px; -moz-border-radius: 5px;}
@@ -215,8 +215,15 @@ filter:progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff',EndCol
 .checkoutPanel .form{margin: 25px; float: left;}
 .checkoutPanel .header .form-select{position: relative; top: -3px;}
 
+#block-fm-commerce-cart-fm-commerce-cart .summary { background:none repeat scroll 0 0 #F0EBE7;}
+#block-fm-commerce-cart-fm-commerce-cart .summary .header {background:none repeat scroll 0 0 #917F6F; color:#FFFFFF; height:36px; line-height:36px; padding:0 12px; }
+#block-fm-commerce-cart-fm-commerce-cart .summary .header a {color:#FFFFFF; float:right;}
+#block-fm-commerce-cart-fm-commerce-cart .summary .pad {padding:14px;}
+#block-fm-commerce-cart-fm-commerce-cart .summary .pad, .summary .pad a {color:#322F2C;font-family:"museo-sans-1","museo-sans-2",Helvetica;font-style:normal;}
+#block-fm-commerce-cart-fm-commerce-cart .summary .alert {background:url("../images/bg_summary_alert.png") no-repeat scroll left top transparent;color:#FFFFFF;font-size:14px;height:35px;line-height:42px;width:233px;}
+#block-fm-commerce-cart-fm-commerce-cart  .summary .alert span { padding-left:29px;}
 
-
+	
 /* Footer */
 #footer{background:#f9f8f6 url(../images/bg_footer.jpg) top left repeat-x; clear: both;margin-top: 30px;}
 #footer .container{padding: 15px 0 10px 0;}
