--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -17,6 +17,9 @@ ul{list-style-type: none;}
 .form-submit:hover, .button a:hover {background-position: left bottom;}
 .check {margin-right:5px;}
 
+.asterik {float:right;font-size:11px;}
+.form-item .form-required, .asterik span {color:#BC4038;}
+
 
 
 #header{color: #fff}
@@ -206,15 +209,34 @@ filter:progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff',EndCol
 	
 .customer_profile_shipping {margin-bottom: 25px;}
 
-.page-checkout fieldset{ background: #faf8f6; float: left; width: 680px;border-radius:5px; -webkit-border-radius: 5px; -moz-border-radius: 5px;}
-.page-checkout fieldset legend {width: 100%; background: #e2d9d0; border-top-left-radius:5px; -webkit-border-top-left-radius: 5px; -moz-border-top-left-radius: 5px;border-top-right-radius:5px; -webkit-border-top-right-radius: 5px; -moz-border-top-right-radius: 5px; }
+.checkoutPanel{ background: #faf8f6; float: left; width: 680px;border-radius:5px; -webkit-border-radius: 5px; -moz-border-radius: 5px;}
+.checkoutPanel .header {width: 100%; background: #e2d9d0; border-top-left-radius:5px; -webkit-border-top-left-radius: 5px; -moz-border-top-left-radius: 5px;border-top-right-radius:5px; -webkit-border-top-right-radius: 5px; -moz-border-top-right-radius: 5px; }
 .checkoutPanel .header .pad{padding: 10px;}
 .checkoutPanel .header .dropdown{float: right; }
 .checkoutPanel .header .dropdown .form-select{width: 200px; height: auto;}
 .checkoutPanel .header .dropdown span{font-size: 13px;}
 .checkoutPanel .form{margin: 25px; float: left;}
-.checkoutPanel .header .form-select{position: relative; top: -3px;}
 
+.checkoutPanel label {font-weight: normal}
+.checkoutPanel .header .form-select{position: relative; top: -3px;}
+.checkoutPanel .form-item  { float:left; font-size:13px; padding:0 25px 18px 0; margin: 0;}
+.checkoutPanel .form-item  .form-text { background:url("../images/bg_field.jpg") repeat-x scroll left top transparent; border:1px solid #CBC1BE; height:24px;line-height:24px; margin:4px 0 0; padding-left:4px; width:230px; }
+.checkoutPanel .form-select {border:1px solid #CBC1BE; height:26px;line-height:24px; margin-top:4px; width:240px;}
+.checkoutPanel .form-item input:focus { border-color: #BC4038 }
+.checkoutPanel select:focus { border-color: #BC4038; }
+
+.checkoutPanel .form-item .narrow{width: 100px;}
+.checkoutPanel .form-item .long{width: 500px;}
+
+#shipping.checkoutPanel {margin-bottom:25px;}
+
+.checkoutFooter {border-top:2px solid #E5E1DD; float:left; margin-top:25px; padding:12px 0; width:680px;}
+.completeOrder {float:left; font-size:12px; text-align:right;}
+.completeOrder .form-submit {background-image:url("../images/b_bg_red.jpg");display:block;float:right;font-size:16px;padding:10px 14px;text-align:center;width:150px;}
+
+#billing .form {border-right:1px solid #E2D9D0;}
+
+/* Checkout Block */
 #block-fm-commerce-cart-fm-commerce-cart .summary { background:none repeat scroll 0 0 #F0EBE7;}
 #block-fm-commerce-cart-fm-commerce-cart .summary .header {background:none repeat scroll 0 0 #917F6F; color:#FFFFFF; height:36px; line-height:36px; padding:0 12px; }
 #block-fm-commerce-cart-fm-commerce-cart .summary .header a {color:#FFFFFF; float:right;}
