--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -208,7 +208,7 @@ filter:progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff',EndCol
 .page-express-checkout  #header .button a{float: right; padding: 6px 9px; margin-top: 17px;}
 
 .page-express-checkout  #content{position: relative; width: 1000px; margin-top: 20px;background: url(../images/dotted_vertical.png) 704px 0 repeat-y;}
-.page-express-checkout  .sidebarRight .column1{width: 682px;background: ; padding-right: 25px; }
+.page-express-checkout  .sidebarRight .column1{width: 682px;background: ; padding-right: 25px; padding-bottom: 30px;}
 .page-express-checkout  .sidebarRight .column2{position: absolute; width:267px; background: }
 .page-express-checkout  .sidebarRight .sidebar{width: 100%}
 
